Fix hard to read menu item on non-index routes

--- a/src/common/components/layout/menu.module.scss
+++ b/src/common/components/layout/menu.module.scss
@@ -4,6 +4,7 @@ $width-right-column: 190px;
 
 .streameth-highlight {
   color: #8D75FF;
+  stroke: black;
 }
 
 .menu,
